<resources>
    <string name="app_name">AndroidExV1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_auth_github">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to sensors and camera -->
    <string name="sensor_label1">Первый параметр:</string>
    <string name="sensor_label2">Второй параметр:</string>
    <string name="sensor_label3">Третий параметр:</string>
    <string name="takePhotoButton">Сделать фото</string>
    <string name="savePhotoButton">Сохранить фото</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
